@@ -15,17 +15,19 @@ Newsgroups:   comp.lang.asm.x86
 
 
 Chris Rossall (chris.rossall@mailbox.swipnet.se) wrote:
+
 : I wonder if anyone could tell me if there is a bit in the vga that
-: signals a horizontal retrace.I know that there was one on the cga and a
-: lot of programs checked this before writing to screen mem to avoid 'snow'
-: on old cga cards.
+: signals a horizontal retrace.I know that there was one on the cga and
+: a lot of programs checked this before writing to screen mem to avoid
+: 'snow' on old cga cards.
 
 : Thanks..
 
 : -Chris
 
-Read port 03dah bit 0 and bit 3 for vertical retrace.  I think it's the same
-of CGA.  Anyway you haven't to check it to avoid 'snow' on a VGA card.
+Read port 03dah bit 0 and bit 3 for vertical retrace.  I think it's the
+same on CGA.  Anyway you haven't to check it to avoid 'snow' on a VGA
+card.
 
                                                   Human
 
